--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,12 +11,12 @@ jobs:
       - name: setup go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.18
+          go-version: 1.24.0
 
       - name: cache replays
         uses: actions/cache@v2
         with:
-          path: '**/replays'
+          path: "**/replays"
           key: replays
 
       - name: get dependencies
@@ -24,4 +24,3 @@ jobs:
 
       - name: run tests
         run: make test
-
